# task-management-api

./: README.md  pyproject.toml  run.py  task_manager.db
app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: auth.py  notifications.py  projects.py  tasks.py  users.py
tests/: conftest.py  test_auth.py  test_projects.py  test_tasks.py
