[tool.poetry]
name = "task-management-api"
version = "0.1.0"
description = ""
authors = ["jthom2 <134821369+jthom2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
jose = "^1.0.0"
python-jose = "^3.3.0"
pytest = "^8.3.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.10"
slowapi = "^0.1.9"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
